[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/World.gd" type="Script" id=1]
[ext_resource path="res://Graphics/WorldTerrainTiles.tres" type="TileSet" id=2]
[ext_resource path="res://Graphics/WorldBuildingTiles.tres" type="TileSet" id=3]
[ext_resource path="res://Graphics/Sprites/16x16.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Theme/Map Theme.tres" type="Theme" id=5]
[ext_resource path="res://Scripts/Navigator.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Locations/Cave.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Locations/Town.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Locations/House.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scripts/PlayerToken.gd" type="Script" id=10]
[ext_resource path="res://Graphics/Sprites/bicolor_portraits.png" type="Texture" id=11]
[ext_resource path="res://Scripts/MapUI.gd" type="Script" id=12]
[ext_resource path="res://Scenes/TransitionColor.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scripts/MapCamera.gd" type="Script" id=14]
[ext_resource path="res://Scenes/Menu.tscn" type="PackedScene" id=15]

[sub_resource type="TileSet" id=1]
0/name = "16x16.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 0, 0, 0.498039 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="World" type="Node"]
pause_mode = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="Terrain" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -131075, 26, 0, -131074, 26, 0, -131073, 26, 0, -196608, 26, 0, -196607, 26, 0, -196606, 26, 0, -196605, 26, 0, -196604, 29, 0, -196603, 26, 0, -196602, 26, 0, -196601, 26, 0, -196600, 26, 0, -196599, 26, 0, -196598, 29, 0, -196597, 26, 0, -196596, 26, 0, -196595, 26, 0, -196594, 26, 0, -196593, 26, 0, -196592, 26, 0, -196591, 26, 0, -196590, 26, 0, -196589, 26, 0, -196588, 26, 0, -65539, 26, 0, -65538, 26, 0, -65537, 29, 0, -131072, 29, 0, -131071, 29, 0, -131070, 29, 0, -131069, 29, 0, -131068, 26, 0, -131067, 29, 0, -131066, 29, 0, -131065, 29, 0, -131064, 26, 0, -131063, 26, 0, -131062, 29, 0, -131061, 29, 0, -131060, 29, 0, -131059, 26, 0, -131058, 29, 0, -131057, 26, 0, -131056, 26, 0, -131055, 29, 0, -131054, 26, 0, -131053, 26, 0, -131052, 26, 0, -3, 26, 0, -2, 26, 0, -1, 29, 0, -65536, 26, 0, -65535, 29, 0, -65534, 29, 0, -65533, 29, 0, -65532, 29, 0, -65531, 26, 0, -65530, 26, 0, -65529, 29, 0, -65528, 29, 0, -65527, 26, 0, -65526, 26, 0, -65525, 26, 0, -65524, 26, 0, -65523, 26, 0, -65522, 26, 0, -65521, 26, 0, -65520, 26, 0, -65519, 29, 0, -65518, 26, 0, -65517, 29, 0, -65516, 26, 0, 65533, 26, 0, 65534, 26, 0, 65535, 29, 0, 0, 29, 0, 1, 26, 0, 2, 26, 0, 3, 26, 0, 4, 26, 0, 5, 26, 0, 6, 26, 0, 7, 26, 0, 8, 29, 0, 9, 26, 0, 10, 29, 0, 11, 26, 0, 12, 26, 0, 13, 27, 0, 15, 26, 0, 16, 26, 0, 17, 26, 0, 18, 26, 0, 19, 26, 0, 20, 26, 0, 131069, 26, 0, 131070, 26, 0, 131071, 26, 0, 65536, 26, 0, 65537, 26, 0, 65538, 26, 0, 65539, 26, 0, 65540, 26, 0, 65541, 26, 0, 65542, 26, 0, 65543, 26, 0, 65544, 29, 0, 65545, 26, 0, 65546, 26, 0, 65547, 26, 0, 65551, 29, 0, 65552, 26, 0, 65553, 26, 0, 65554, 29, 0, 65555, 26, 0, 65556, 26, 0, 196605, 26, 0, 196606, 29, 0, 196607, 26, 0, 131072, 26, 0, 131073, 26, 0, 131074, 26, 0, 131075, 26, 0, 131076, 26, 0, 131077, 26, 0, 131078, 29, 0, 131079, 26, 0, 131080, 30, 0, 131081, 30, 1, 131082, 30, 1, 131083, 30, 1, 131084, 30, 1, 131085, 30, 2, 131086, 26, 0, 131087, 26, 0, 131088, 26, 0, 131089, 29, 0, 131090, 26, 0, 131091, 29, 0, 131092, 26, 0, 262141, 26, 0, 262142, 29, 0, 262143, 29, 0, 196608, 26, 0, 196609, 26, 0, 196610, 26, 0, 196611, 26, 0, 196612, 26, 0, 196613, 26, 0, 196614, 26, 0, 196615, 26, 0, 196616, 30, 65536, 196617, 30, 65537, 196618, 30, 65537, 196619, 30, 65537, 196620, 30, 65537, 196621, 30, 65538, 196622, 26, 0, 196623, 26, 0, 196625, 26, 0, 196626, 26, 0, 196627, 26, 0, 196628, 26, 0, 327677, 26, 0, 327678, 26, 0, 327679, 29, 0, 262144, 29, 0, 262145, 26, 0, 262146, 26, 0, 262147, 12, 0, 262148, 29, 0, 262152, 30, 65536, 262153, 30, 65537, 262154, 30, 65537, 262155, 30, 65537, 262156, 30, 65537, 262157, 30, 65538, 262158, 26, 0, 262159, 27, 0, 262161, 29, 0, 262162, 26, 0, 262163, 29, 0, 262164, 26, 0, 393213, 26, 0, 393214, 29, 0, 393215, 29, 0, 327680, 29, 0, 327681, 29, 0, 327682, 26, 0, 327683, 12, 0, 327684, 26, 0, 327686, 27, 0, 327688, 30, 65536, 327689, 30, 65537, 327690, 30, 65537, 327691, 30, 65537, 327692, 30, 65537, 327693, 30, 65538, 327697, 26, 0, 327698, 26, 0, 327699, 26, 0, 327700, 26, 0, 458749, 26, 0, 458750, 26, 0, 458751, 29, 0, 393216, 26, 0, 393217, 26, 0, 393218, 26, 0, 393219, 12, 0, 393220, 29, 0, 393224, 30, 65536, 393225, 30, 65537, 393226, 30, 65537, 393227, 30, 65537, 393228, 30, 65537, 393229, 30, 65538, 393230, 26, 0, 393231, 26, 0, 393232, 26, 0, 393233, 29, 0, 393234, 26, 0, 393235, 29, 0, 393236, 26, 0, 524285, 26, 0, 524286, 26, 0, 524287, 29, 0, 458752, 26, 0, 458753, 11, 0, 458754, 26, 0, 458755, 12, 0, 458756, 26, 0, 458757, 26, 0, 458758, 26, 0, 458759, 29, 0, 458760, 30, 65536, 458761, 30, 65537, 458762, 30, 196608, 458763, 30, 131073, 458764, 30, 131073, 458765, 30, 131074, 458766, 26, 0, 458767, 26, 0, 458768, 29, 0, 458769, 29, 0, 458770, 26, 0, 458771, 26, 0, 458772, 26, 0, 589821, 26, 0, 589822, 26, 0, 589823, 29, 0, 524288, 26, 0, 524289, 23, 0, 524290, 15, 0, 524291, 24, 0, 524292, 15, 0, 524293, 15, 0, 524294, 15, 0, 524295, 15, 0, 524296, 30, 65536, 524297, 30, 65537, 524298, 30, 65538, 524299, 15, 0, 524300, 15, 0, 524301, 18, 0, 524302, 16, 0, 524303, 26, 0, 524304, 26, 0, 524305, 29, 0, 524306, 26, 0, 524307, 26, 0, 524308, 26, 0, 655357, 26, 0, 655358, 26, 0, 655359, 29, 0, 589824, 26, 0, 589825, 26, 0, 589826, 26, 0, 589827, 26, 0, 589828, 26, 0, 589829, 26, 0, 589830, 26, 0, 589831, 26, 0, 589832, 30, 65536, 589833, 30, 65537, 589834, 30, 65538, 589835, 26, 0, 589836, 26, 0, 589837, 12, 0, 589838, 26, 0, 589839, 26, 0, 589840, 29, 0, 589841, 26, 0, 589842, 26, 0, 589843, 26, 0, 589844, 29, 0, 720893, 26, 0, 720894, 26, 0, 720895, 29, 0, 655360, 26, 0, 655361, 26, 0, 655362, 26, 0, 655363, 26, 0, 655364, 26, 0, 655365, 29, 0, 655366, 26, 0, 655367, 26, 0, 655368, 30, 65536, 655369, 30, 65537, 655370, 30, 65538, 655371, 26, 0, 655372, 26, 0, 655373, 12, 0, 655374, 26, 0, 655375, 26, 0, 655376, 26, 0, 655377, 26, 0, 655378, 26, 0, 655379, 29, 0, 655380, 26, 0, 786429, 26, 0, 786430, 26, 0, 786431, 29, 0, 720896, 26, 0, 720897, 29, 0, 720898, 26, 0, 720899, 26, 0, 720900, 26, 0, 720901, 26, 0, 720902, 26, 0, 720903, 26, 0, 720904, 30, 65536, 720905, 30, 65537, 720906, 30, 65538, 720907, 26, 0, 720908, 26, 0, 720909, 12, 0, 720910, 26, 0, 720911, 26, 0, 720912, 26, 0, 720913, 26, 0, 720914, 26, 0, 720915, 26, 0, 720916, 26, 0, 851965, 26, 0, 851966, 26, 0, 851967, 29, 0, 786432, 29, 0, 786433, 29, 0, 786434, 29, 0, 786435, 29, 0, 786436, 29, 0, 786437, 29, 0, 786438, 29, 0, 786439, 29, 0, 786440, 30, 131072, 786441, 30, 131073, 786442, 30, 131074, 786443, 26, 0, 786444, 14, 0, 786445, 21, 0, 786446, 15, 0, 786447, 15, 0, 786448, 16, 0, 786449, 26, 0, 786450, 26, 0, 786451, 26, 0, 786452, 26, 0, 917501, 26, 0, 917502, 26, 0, 917503, 26, 0, 851968, 26, 0, 851969, 26, 0, 851970, 26, 0, 851971, 26, 0, 851972, 26, 0, 851973, 26, 0, 851974, 26, 0, 851975, 26, 0, 851976, 26, 0, 851977, 26, 0, 851978, 26, 0, 851979, 26, 0, 851980, 26, 0, 851981, 13, 0, 851982, 26, 0, 851983, 26, 0, 851984, 26, 0, 851985, 26, 0, 851986, 26, 0, 851987, 26, 0, 851988, 26, 0, 983037, 26, 0, 983038, 26, 0, 983039, 26, 0, 917504, 26, 0, 917505, 26, 0, 917506, 26, 0, 917507, 26, 0, 917508, 26, 0, 917509, 26, 0, 917510, 26, 0, 917511, 26, 0, 917512, 26, 0, 917513, 29, 0, 917514, 26, 0, 917515, 26, 0, 917516, 26, 0, 917517, 26, 0, 917518, 26, 0, 917519, 26, 0, 917520, 26, 0, 917521, 26, 0, 917522, 26, 0, 917523, 26, 0, 917524, 26, 0, 1048573, 26, 0, 1048574, 26, 0, 1048575, 26, 0, 983040, 26, 0, 983041, 26, 0, 983042, 26, 0, 983043, 26, 0, 983044, 26, 0, 983045, 26, 0, 983046, 26, 0, 983047, 26, 0, 983048, 26, 0, 983049, 26, 0, 983050, 26, 0, 983051, 26, 0, 983052, 26, 0, 983053, 26, 0, 983054, 26, 0, 983055, 26, 0, 983056, 26, 0, 983057, 26, 0, 983058, 26, 0, 983059, 26, 0, 983060, 26, 0, 1114109, 26, 0, 1114110, 26, 0, 1114111, 26, 0, 1048576, 26, 0, 1048577, 26, 0, 1048578, 26, 0, 1048579, 26, 0, 1048580, 26, 0, 1048581, 26, 0, 1048582, 26, 0, 1048583, 26, 0, 1048584, 26, 0, 1048585, 26, 0, 1048586, 26, 0, 1048587, 26, 0, 1048588, 12, 0, 1048589, 12, 0, 1048590, 26, 0, 1048591, 26, 0, 1048592, 26, 0, 1048593, 26, 0, 1048594, 26, 0, 1048595, 26, 0, 1048596, 26, 0, 1179645, 26, 0, 1179646, 26, 0, 1179647, 26, 0, 1114112, 26, 0, 1114113, 26, 0, 1114114, 26, 0, 1114115, 26, 0, 1114116, 26, 0, 1114117, 26, 0, 1114118, 26, 0, 1114119, 26, 0, 1114120, 26, 0, 1114121, 26, 0, 1114122, 26, 0, 1114123, 26, 0, 1114124, 13, 0, 1114125, 13, 0, 1114126, 26, 0, 1114127, 26, 0, 1114128, 26, 0, 1114129, 26, 0, 1114130, 26, 0, 1114131, 26, 0, 1114132, 26, 0, 1245181, 26, 0, 1245182, 26, 0, 1245183, 26, 0, 1179648, 26, 0, 1179649, 26, 0, 1179650, 26, 0, 1179651, 26, 0, 1179652, 26, 0, 1179653, 26, 0, 1179654, 26, 0, 1179655, 26, 0, 1179656, 26, 0, 1179657, 26, 0, 1179658, 26, 0, 1179659, 26, 0, 1179660, 26, 0, 1179661, 26, 0, 1179662, 26, 0, 1179663, 26, 0, 1179664, 26, 0, 1179665, 26, 0, 1179666, 26, 0, 1179667, 26, 0, 1179668, 26, 0, 1310717, 26, 0, 1310718, 26, 0, 1310719, 26, 0, 1245184, 26, 0, 1245185, 26, 0, 1245186, 26, 0, 1245187, 26, 0, 1245188, 26, 0, 1245189, 26, 0, 1245190, 26, 0, 1245191, 26, 0, 1245192, 26, 0, 1245193, 26, 0, 1245194, 26, 0, 1245195, 26, 0, 1245196, 26, 0, 1245197, 26, 0, 1245198, 26, 0, 1245199, 26, 0, 1245200, 26, 0, 1245201, 26, 0, 1245202, 26, 0, 1245203, 26, 0, 1245204, 26, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Buildings" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -131079, 26, 0, -65543, 26, 0, -8, 26, 0, -7, 26, 0, 262137, 26, 0, 196611, 0, 0, 393216, 28, 0, 458766, 9, 0, 524297, 31, 0, 524304, 27, 0, 720908, 2, 0, 720911, 34, 0, 720912, 33, 0, 786449, 32, 0, 851981, 36, 0, 851983, 33, 0, 851984, 34, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Roads" type="TileMap" parent="."]
visible = false
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 196611, 0, 0, 262147, 0, 0, 327683, 0, 0, 393217, 0, 0, 393219, 0, 0, 393220, 0, 0, 458753, 0, 0, 458755, 0, 0, 458766, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 589837, 0, 0, 655373, 0, 0, 720909, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 851981, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Navigator" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Cave" parent="Navigator" instance=ExtResource( 7 )]
margin_left = 16.0
margin_top = 96.0
margin_right = 32.0
margin_bottom = 112.0

[node name="Town" parent="Navigator" instance=ExtResource( 8 )]
margin_left = 48.0
margin_top = 48.0
margin_right = 64.0
margin_bottom = 64.0

[node name="Casa" parent="Navigator" instance=ExtResource( 9 )]
margin_left = 224.0
margin_top = 112.0
margin_right = 240.0
margin_bottom = 128.0
description = "La casa de Raul"

[node name="PlayerToken" type="Node2D" parent="Navigator"]
position = Vector2( 48, 48 )
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Navigator/PlayerToken"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="Tween" type="Tween" parent="Navigator/PlayerToken"]
playback_process_mode = 0

[node name="PlayerCamera" type="Camera2D" parent="Navigator/PlayerToken"]
offset = Vector2( 8, 38 )
limit_left = -46
limit_top = -46
limit_right = 337
limit_bottom = 300
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Transitions" type="CanvasLayer" parent="."]
layer = 3

[node name="TransitionColor" parent="Transitions" instance=ExtResource( 13 )]
margin_left = 0.0694427
margin_top = 0.0694427
margin_right = 0.0694427
margin_bottom = 0.0694427

[node name="UI" type="CanvasLayer" parent="."]
pause_mode = 2
offset = Vector2( 0, 55 )
transform = Transform2D( 1, 0, 0, 1, 0, 55 )
script = ExtResource( 12 )

[node name="Menu" parent="UI" instance=ExtResource( 15 )]

[node name="Tween" type="Tween" parent="UI"]

[node name="DescriptionPanel" type="Panel" parent="UI"]
margin_left = 1.0
margin_top = 106.0
margin_right = 89.0
margin_bottom = 138.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RichText" type="RichTextLabel" parent="UI/DescriptionPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ActionsPanel" type="Panel" parent="UI"]
margin_left = 1.0
margin_top = 138.0
margin_right = 89.0
margin_bottom = 159.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ActionsContainer" type="HBoxContainer" parent="UI/ActionsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionButton" type="Button" parent="UI/ActionsPanel/ActionsContainer"]
margin_right = 38.0
margin_bottom = 13.0
rect_min_size = Vector2( 10, 0 )
size_flags_horizontal = 3
disabled = true

[node name="ActionButton2" type="Button" parent="UI/ActionsPanel/ActionsContainer"]
margin_left = 42.0
margin_right = 80.0
margin_bottom = 13.0
rect_min_size = Vector2( 10, 0 )
size_flags_horizontal = 3
disabled = true

[node name="MapCamera" type="Camera2D" parent="."]
position = Vector2( 37.6724, 42.439 )
offset = Vector2( 8, 38 )
current = true
limit_left = -46
limit_top = -46
limit_right = 337
limit_bottom = 300
smoothing_enabled = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource( 14 )
__meta__ = {
"_edit_lock_": true
}

[node name="Tween" type="Tween" parent="MapCamera"]
playback_process_mode = 0
[connection signal="arrived_at_destination" from="Navigator/PlayerToken" to="Navigator" method="_on_PlayerToken_arrived_at_destination"]
[connection signal="pause_world" from="UI" to="." method="_on_UI_pause_world"]
[connection signal="pressed" from="UI/ActionsPanel/ActionsContainer/ActionButton" to="UI" method="_on_ActionButton_pressed"]
[connection signal="pressed" from="UI/ActionsPanel/ActionsContainer/ActionButton2" to="UI" method="_on_ActionButton2_pressed"]
[connection signal="tween_all_completed" from="MapCamera/Tween" to="MapCamera" method="_on_Tween_tween_all_completed"]
